Mejoras en las cards/experiencias

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                   <div class="box-top">
                     <div class="profile">
                       <div class="profile-img">
-                        <img src="img/nosotros/Bechara-Nayla.jpeg" alt="" />
+                        <img src="./img/nosotros/Bechara-Nayla.jpeg" alt="" />
                       </div>
                       <div class="name-user">
                         <strong>Nayla Bechara</strong>
@@ -216,7 +216,10 @@
                   <div class="box-top">
                     <div class="profile">
                       <div class="profile-img">
-                        <img src="img/nosotros/Belen-Jessikowski.jpg" alt="" />
+                        <img
+                          src="./img/nosotros/Belen-Jessikowski.jpg"
+                          alt=""
+                        />
                       </div>
                       <div class="name-user">
                         <strong>Belen Jessikowski</strong>
@@ -242,7 +245,10 @@
                   <div class="box-top">
                     <div class="profile">
                       <div class="profile-img">
-                        <img src="img/nosotros/Ezequiel-Villalba.jpg" alt="" />
+                        <img
+                          src="./img/nosotros/Ezequiel-Villalba.jpg"
+                          alt=""
+                        />
                       </div>
                       <div class="name-user">
                         <strong>Ezequiel Villalba</strong>
@@ -268,7 +274,7 @@
                   <div class="box-top">
                     <div class="profile">
                       <div class="profile-img">
-                        <img src="img/nosotros/Ivan-Caravajal.jpg" alt="" />
+                        <img src="./img/nosotros/Ivan-Caravajal.jpg" alt="" />
                       </div>
                       <div class="name-user">
                         <strong>Iván Caravajal</strong>
@@ -294,7 +300,7 @@
                   <div class="box-top">
                     <div class="profile">
                       <div class="profile-img">
-                        <img src="img/nosotros/Benitez-Mauro.jpg" alt="" />
+                        <img src="./img/nosotros/Benitez-Mauro.jpg" alt="" />
                       </div>
                       <div class="name-user">
                         <strong>Mauro Benitez</strong>
@@ -320,7 +326,7 @@
                   <div class="box-top">
                     <div class="profile">
                       <div class="profile-img">
-                        <img src="img/nosotros/Riesco-Geronimo.jpg" alt="" />
+                        <img src="./img/nosotros/Riesco-Geronimo.jpg" alt="" />
                       </div>
                       <div class="name-user">
                         <strong>Gerónimo Riesco</strong>
@@ -346,7 +352,7 @@
                   <div class="box-top">
                     <div class="profile">
                       <div class="profile-img">
-                        <img src="img/Default_pfp.jpg" alt="" />
+                        <img src="./img/Default_pfp.jpg" alt="" />
                       </div>
                       <div class="name-user">
                         <strong>Abraham Treyan</strong>
