--- a/pages/LaBeca.html
+++ b/pages/LaBeca.html
@@ -65,7 +65,8 @@
           <dl>
             <dt>
               <a class="accordionTitle" href="#"
-                >¿A través de qué medios me puedo informar sobre las convocatorias a inscripciones?</a
+                >¿A través de qué medios me puedo informar sobre las
+                convocatorias a inscripciones?</a
               >
             </dt>
             <dd class="accordionItem accordionItemCollapsed">
@@ -113,7 +114,8 @@
             </dd>
             <dt>
               <a href="#" class="accordionTitle"
-                >¿Cómo es el proceso de evaluación que se lleva a cabo durante esta formación?</a
+                >¿Cómo es el proceso de evaluación que se lleva a cabo durante
+                esta formación?</a
               >
             </dt>
             <dd class="accordionItem accordionItemCollapsed">
@@ -129,7 +131,8 @@
             </dd>
             <dt>
               <a href="#" class="accordionTitle"
-                >¿Cuáles son las principales herramientas de trabajo que se les enseñan a los alumnos?</a
+                >¿Cuáles son las principales herramientas de trabajo que se les
+                enseñan a los alumnos?</a
               >
             </dt>
             <dd class="accordionItem accordionItemCollapsed">
@@ -145,7 +148,8 @@
             </dd>
             <dt>
               <a href="#" class="accordionTitle"
-                >¿Cúal es la carga horaria total y semanal correspondiente a la cursada?</a
+                >¿Cúal es la carga horaria total y semanal correspondiente a la
+                cursada?</a
               >
             </dt>
             <dd class="accordionItem accordionItemCollapsed">
@@ -177,7 +181,8 @@
             </dd>
             <dt>
               <a href="#" class="accordionTitle"
-                >¿Es seguro que voy a conseguir trabajo durante la cursada o una vez finalizada la misma?</a
+                >¿Es seguro que voy a conseguir trabajo durante la cursada o una
+                vez finalizada la misma?</a
               >
             </dt>
             <dd class="accordionItem accordionItemCollapsed">
