jpm - artech footer

--- a/pages/LaBeca.html
+++ b/pages/LaBeca.html
@@ -220,7 +220,7 @@
     <footer id="foot">
       <p>
         Hecho con <i class="fa-solid fa-heart"></i> por egresados de
-        <em>Centro Pescar "Paths to the Future"</em>
+        <em>Centro Pescar "Paths to the Future" JPM - Artech</em>
       </p>
     </footer>
 
