Agregué las respuestas del FAQ

--- a/pages/LaBeca.html
+++ b/pages/LaBeca.html
@@ -71,13 +71,9 @@
             </dt>
             <dd class="accordionItem accordionItemCollapsed">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-                eu interdum diam. Donec interdum porttitor risus non bibendum.
-                Maecenas sollicitudin eros in quam imperdiet placerat. Cras
-                justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec
-                dignissim arcu nec elit faucibus condimentum. Donec facilisis
-                consectetur enim sit amet varius. Pellentesque justo dui,
-                sodales quis luctus a, iaculis eget mauris.
+                Para informarte podes visitar la página oficial de la Fundación
+                Pescar, como así también sus redes sociales donde se comparte
+                información y novedades adicionales al sitio web.
               </p>
             </dd>
             <dt>
@@ -87,13 +83,10 @@
             </dt>
             <dd class="accordionItem accordionItemCollapsed">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-                eu interdum diam. Donec interdum porttitor risus non bibendum.
-                Maecenas sollicitudin eros in quam imperdiet placerat. Cras
-                justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec
-                dignissim arcu nec elit faucibus condimentum. Donec facilisis
-                consectetur enim sit amet varius. Pellentesque justo dui,
-                sodales quis luctus a, iaculis eget mauris.
+                No se necesitan conocimientos técnicos previos ya que durante el
+                transcurso de la capacitación se te otorgará todo lo necesario
+                para desarrollarte de la mejor manera tanto en el aspecto
+                laboral como de igual manera en el personal.
               </p>
             </dd>
             <dt>
@@ -103,13 +96,10 @@
             </dt>
             <dd class="accordionItem accordionItemCollapsed">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-                eu interdum diam. Donec interdum porttitor risus non bibendum.
-                Maecenas sollicitudin eros in quam imperdiet placerat. Cras
-                justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec
-                dignissim arcu nec elit faucibus condimentum. Donec facilisis
-                consectetur enim sit amet varius. Pellentesque justo dui,
-                sodales quis luctus a, iaculis eget mauris.
+                Dicho proceso consta de dos entrevistas. La primera se realiza
+                con una dinámica grupal. Si atraviesas esta instancia serás
+                convocado a una segunda entrevista cuyo formato es individual y
+                donde se llevará a cabo un examen psicotécnico.
               </p>
             </dd>
             <dt>
@@ -120,13 +110,10 @@
             </dt>
             <dd class="accordionItem accordionItemCollapsed">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-                eu interdum diam. Donec interdum porttitor risus non bibendum.
-                Maecenas sollicitudin eros in quam imperdiet placerat. Cras
-                justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec
-                dignissim arcu nec elit faucibus condimentum. Donec facilisis
-                consectetur enim sit amet varius. Pellentesque justo dui,
-                sodales quis luctus a, iaculis eget mauris.
+                El proceso de evaluación integra diversos factores tales como la
+                presencialidad del alumno, la participación y el desempeño de
+                las actividades propuestas. Cabe resaltar que no se tiene en
+                cuenta una calificación numérica.
               </p>
             </dd>
             <dt>
@@ -137,13 +124,11 @@
             </dt>
             <dd class="accordionItem accordionItemCollapsed">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-                eu interdum diam. Donec interdum porttitor risus non bibendum.
-                Maecenas sollicitudin eros in quam imperdiet placerat. Cras
-                justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec
-                dignissim arcu nec elit faucibus condimentum. Donec facilisis
-                consectetur enim sit amet varius. Pellentesque justo dui,
-                sodales quis luctus a, iaculis eget mauris.
+                El trabajo en equipo es una herramienta clave para transitar
+                este proceso de formación debido a que desde el comienzo hasta
+                el final de la cursada se van a encontrar realizando actividades
+                en conjunto, adentrándose en un aprendizaje constante y
+                colectivo.
               </p>
             </dd>
             <dt>
@@ -154,13 +139,11 @@
             </dt>
             <dd class="accordionItem accordionItemCollapsed">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-                eu interdum diam. Donec interdum porttitor risus non bibendum.
-                Maecenas sollicitudin eros in quam imperdiet placerat. Cras
-                justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec
-                dignissim arcu nec elit faucibus condimentum. Donec facilisis
-                consectetur enim sit amet varius. Pellentesque justo dui,
-                sodales quis luctus a, iaculis eget mauris.
+                A la carga horaria total le corresponden 300 horas. 172 horas de
+                desarrollo técnico y 128 horas de desarrollo de competencias
+                interpersonales. Mientras tanto la carga horaria semanal
+                sostiene aproximadamente un total de 15 horas (3 horas diarias
+                de lunes a viernes).
               </p>
             </dd>
             <dt>
@@ -170,13 +153,10 @@
             </dt>
             <dd class="accordionItem accordionItemCollapsed">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-                eu interdum diam. Donec interdum porttitor risus non bibendum.
-                Maecenas sollicitudin eros in quam imperdiet placerat. Cras
-                justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec
-                dignissim arcu nec elit faucibus condimentum. Donec facilisis
-                consectetur enim sit amet varius. Pellentesque justo dui,
-                sodales quis luctus a, iaculis eget mauris.
+                La cantidad de cupos del curso es muy variable y está sujeta a
+                diversos factores que incitan una modificación directa en la
+                misma, pero aproximadamente la cifra se mantiene entre los 20 y
+                30 cupos.
               </p>
             </dd>
             <dt>
@@ -187,13 +167,12 @@
             </dt>
             <dd class="accordionItem accordionItemCollapsed">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-                eu interdum diam. Donec interdum porttitor risus non bibendum.
-                Maecenas sollicitudin eros in quam imperdiet placerat. Cras
-                justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec
-                dignissim arcu nec elit faucibus condimentum. Donec facilisis
-                consectetur enim sit amet varius. Pellentesque justo dui,
-                sodales quis luctus a, iaculis eget mauris.
+                De hecho no lo es. Si bien Fundación Pescar tiene un alto
+                porcentaje de empleabilidad, no te asegura que consigas un
+                trabajo antes de finalizar la capacitación, sino que esto
+                depende del alumno mismo ya que al fin y al cabo será quien
+                implemente y ponga en práctica todas las herramientas enseñadas
+                en este proceso.
               </p>
             </dd>
             <dt>
@@ -203,13 +182,9 @@
             </dt>
             <dd class="accordionItem accordionItemCollapsed">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-                eu interdum diam. Donec interdum porttitor risus non bibendum.
-                Maecenas sollicitudin eros in quam imperdiet placerat. Cras
-                justo purus, rhoncus nec lobortis ut, iaculis vel ipsum. Donec
-                dignissim arcu nec elit faucibus condimentum. Donec facilisis
-                consectetur enim sit amet varius. Pellentesque justo dui,
-                sodales quis luctus a, iaculis eget mauris.
+                Luego de finalizar el curso se hará un seguimiento de dos años
+                del egresado en donde se le proporcionarán diversas
+                oportunidades de empleo, becas, entre otros.
               </p>
             </dd>
           </dl>
