--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
       </section>
 
       <div class="companias-asociadas">
-        <h2 id="titulo-companias"><i>Empresas que acompañan el proyecto...</i></h2>
+        <h2 id="titulo-companias">
+          <i>Empresas que acompañan el proyecto...</i>
+        </h2>
         <img src="./img/empresas.png" alt="" />
       </div>
 
