Mejoras en el navbar (dropdown)

--- a/index.html
+++ b/index.html
@@ -38,8 +38,18 @@
               <a href="./index.html">HOME</a>
             </li>
             <li>
-              <a href="./pages/NuestroGrupo.html">NUESTRO GRUPO</a>
+              <div class="dropdown">
+                <button class="dropbtn">
+                  NOSOTROS
+                  <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                  <a href="../pages/Desarrolladores.html">DESARROLLADORES</a>
+                  <a href="./pages/NuestroGrupo.html">NUESTRO GRUPO</a>
+                </div>
+              </div>
             </li>
+
             <li>
               <a href="./pages/ComoIngresar.html">COMO INGRESAR</a>
             </li>
