--- a/index.html
+++ b/index.html
@@ -393,18 +393,18 @@
 
         <div class="contact-details">
           <div class="light-box box-hover">
-            <h3><i class="fa fa-map-marker"></i> Dirección</h3>
-            <p>Libertad 1173, CABA</p>
+            <h3><i class="fa fa-envelope"></i> Email</h3>
+            <p>pescar@pescar.org.ar</p>
+          </div>
+
+          <div class="light-box box-hover">
+            <h3><i class="fa-solid fa-magnifying-glass"></i> Web</h3>
+            <p>pescar.org.ar</p>
           </div>
 
           <div class="light-box box-hover">
             <h3><i class="fa fa-paper-plane"></i> Teléfono</h3>
             <p>+54 11-4812-1818</p>
-          </div>
-
-          <div class="light-box box-hover">
-            <h3><i class="fa fa-envelope"></i> Email</h3>
-            <p>pescar@pescar.org.ar</p>
           </div>
         </div>
       </section>
