Agrego información a las cards del home

--- a/index.html
+++ b/index.html
@@ -94,12 +94,11 @@
                     <path d=""></path>
                   </svg>
                   <div class="card__header-text">
-                    <h3 class="card__title">Quien es pescar</h3>
+                    <h3 class="card__title">¿Quién es pescar?</h3>
                   </div>
                 </div>
                 <p class="card__description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Asperiores, blanditiis?
+                  “Fundación Pescar” es una organización de la sociedad civil sin fines de lucro cuyo objetivo es educar para el trabajo. Con el apoyo de medianas y grandes empresas reúnen becas para capacitar jóvenes e insertarlos en el mundo del trabajo.
                 </p>
               </div>
             </a>
@@ -117,12 +116,11 @@
                     <path d=""></path>
                   </svg>
                   <div class="card__header-text">
-                    <h3 class="card__title">Cual es el proposito del curso?</h3>
+                    <h3 class="card__title">¿Por qué hacemos este proyecto?</h3>
                   </div>
                 </div>
                 <p class="card__description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Asperiores, blanditiis?
+                  Somos un grupo de egresados del Centro Pescar “Paths to the Future”, con capacitación en Desarrollo Web Full Stack. Decidimos hacer este proyecto con el objetivo de ayudar a otras personas para que conozcan más acerca de esta capacitación y contar nuestra experiencia, cómo nos ayudó a nosotros en nuestro desarrollo profesional y personal.
                 </p>
               </div>
             </a>
@@ -140,12 +138,11 @@
                     <path d=""></path>
                   </svg>
                   <div class="card__header-text">
-                    <h3 class="card__title">En que consiste el curso?</h3>
+                    <h3 class="card__title">¿Por qué el curso?/¿Qué distingue esta capacitación de otros cursos?</h3>
                   </div>
                 </div>
                 <p class="card__description">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Asperiores, blanditiis?
+                  Accediendo a esta beca nos esperábamos solamente clases técnicas, nuestra deducción fue incompleta, fue mucho más que eso. Tiene además clases de habilidades blandas, inclusión, acompañamiento continuo y el apoyo de empresas asociadas que ofrecen su espacio, en este caso también nos ofrecieron capacitaciones internas que ayudan a construir nuestro conocimiento en el área IT.
                 </p>
               </div>
             </a>
