Agregué las cards de nuestro grupo

--- a/pages/NuestroGrupo.html
+++ b/pages/NuestroGrupo.html
@@ -49,9 +49,44 @@
           </ul>
         </nav>
       </header>
+
+      <div class="conteiner-cards">
+        <div class="card-grupo card-grupo1">
+          <div class="imgBx">
+            <img src="" alt="Homero Simpson" />
+          </div>
+          <div class="content">
+            <div class="details">
+              <h2 class="nombre"><br /><span></span></h2>
+              <div class="card_btn">
+                <a class="atext1" href="https://github.com/" target="_blank"
+                  ><i class="texto">GitHub</i
+                  ><img id="imgGitHub" src="../img/cardsGrupo/github-icon.png"
+                /></a>
+                <a
+                  class="atext2"
+                  href="https://www.linkedin.com"
+                  target="_blank"
+                  ><i class="texto">LinkedIn</i
+                  ><img
+                    id="imgLinkedin"
+                    src="../img/cardsGrupo/linkedin-icon.png"
+                /></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="directivos"></div>
+
+        <div class="orientadora"></div>
+
+        <div class="estudiantes"></div>
+      </div>
+      <div id="auxiliarFooter"></div>
     </main>
 
-    <footer id="foot">
+    <footer id="footer-NuestroGrupo">
       <p>
         Hecho con <i class="fa-solid fa-heart"></i> por egresados de
         <em>Centro Pescar "Paths to the Future" JPM - Artech</em>
