--- a/index.html
+++ b/index.html
@@ -98,7 +98,10 @@
                   </div>
                 </div>
                 <p class="card__description">
-                  “Fundación Pescar” es una organización de la sociedad civil sin fines de lucro cuyo objetivo es educar para el trabajo. Con el apoyo de medianas y grandes empresas reúnen becas para capacitar jóvenes e insertarlos en el mundo del trabajo.
+                  “Fundación Pescar” es una organización de la sociedad civil
+                  sin fines de lucro cuyo objetivo es educar para el trabajo.
+                  Con el apoyo de medianas y grandes empresas reúnen becas para
+                  capacitar jóvenes e insertarlos en el mundo del trabajo.
                 </p>
               </div>
             </a>
@@ -120,7 +123,12 @@
                   </div>
                 </div>
                 <p class="card__description">
-                  Somos un grupo de egresados del Centro Pescar “Paths to the Future”, con capacitación en Desarrollo Web Full Stack. Decidimos hacer este proyecto con el objetivo de ayudar a otras personas para que conozcan más acerca de esta capacitación y contar nuestra experiencia, cómo nos ayudó a nosotros en nuestro desarrollo profesional y personal.
+                  Somos un grupo de egresados del Centro Pescar “Paths to the
+                  Future”, con capacitación en Desarrollo Web Full Stack.
+                  Decidimos hacer este proyecto con el objetivo de ayudar a
+                  otras personas para que conozcan más acerca de esta
+                  capacitación y contar nuestra experiencia, cómo nos ayudó a
+                  nosotros en nuestro desarrollo profesional y personal.
                 </p>
               </div>
             </a>
@@ -138,11 +146,20 @@
                     <path d=""></path>
                   </svg>
                   <div class="card__header-text">
-                    <h3 class="card__title">¿Por qué el curso?/¿Qué distingue esta capacitación de otros cursos?</h3>
+                    <h3 class="card__title">
+                      ¿Por qué el curso?/¿Qué distingue esta capacitación de
+                      otros cursos?
+                    </h3>
                   </div>
                 </div>
                 <p class="card__description">
-                  Accediendo a esta beca nos esperábamos solamente clases técnicas, nuestra deducción fue incompleta, fue mucho más que eso. Tiene además clases de habilidades blandas, inclusión, acompañamiento continuo y el apoyo de empresas asociadas que ofrecen su espacio, en este caso también nos ofrecieron capacitaciones internas que ayudan a construir nuestro conocimiento en el área IT.
+                  Accediendo a esta beca nos esperábamos solamente clases
+                  técnicas, nuestra deducción fue incompleta, fue mucho más que
+                  eso. Tiene además clases de habilidades blandas, inclusión,
+                  acompañamiento continuo y el apoyo de empresas asociadas que
+                  ofrecen su espacio, en este caso también nos ofrecieron
+                  capacitaciones internas que ayudan a construir nuestro
+                  conocimiento en el área IT.
                 </p>
               </div>
             </a>
