Agregué la sección desarrolladores

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                   <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                  <a href="../pages/Desarrolladores.html">DESARROLLADORES</a>
+                  <a href="./pages/Desarrolladores.html">DESARROLLADORES</a>
                   <a href="./pages/NuestroGrupo.html">NUESTRO GRUPO</a>
                 </div>
               </div>
