Agregué la sección agradecimientos

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <div class="dropdown-content">
                   <a href="./pages/Desarrolladores.html">DESARROLLADORES</a>
                   <a href="./pages/NuestroGrupo.html">NUESTRO GRUPO</a>
+                  <a href="./pages/Agradecimientos.html">AGRADECIMIENTOS</a>
                 </div>
               </div>
             </li>
