--- a/pages/Agradecimientos.html
+++ b/pages/Agradecimientos.html
@@ -38,7 +38,17 @@
               <a href="../index.html">HOME</a>
             </li>
             <li>
-              <a href="../pages/NuestroGrupo.html">NUESTRO GRUPO</a>
+              <div class="dropdown">
+                <button class="dropbtn">
+                  NOSOTROS
+                  <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                  <a href="../pages/Desarrolladores.html">DESARROLLADORES</a>
+                  <a href="../pages/NuestroGrupo.html">NUESTRO GRUPO</a>
+                  <a href="../pages/Agradecimientos.html">AGRADECIMIENTOS</a>
+                </div>
+              </div>
             </li>
             <li>
               <a href="../pages/ComoIngresar.html">COMO INGRESAR</a>
@@ -49,6 +59,48 @@
           </ul>
         </nav>
       </header>
+
+      <div id="main-agr">
+        <div class="div-agr">
+          <img src="../img/iconoCompleto.png" alt="" srcset="" />
+          <div class="text-agr">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam
+            ad, aspernatur quod accusamus illo a adipisci, voluptatibus laborum
+            molestias, nam recusandae iste. Molestiae quaerat veritatis facilis
+            quibusdam maxime vel deleniti.
+          </div>
+        </div>
+
+        <div class="div-agr">
+          <img src="../img/JPmorgan.png" alt="" srcset="" />
+          <div class="text-agr">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam
+            ad, aspernatur quod accusamus illo a adipisci, voluptatibus laborum
+            molestias, nam recusandae iste. Molestiae quaerat veritatis facilis
+            quibusdam maxime vel deleniti.
+          </div>
+        </div>
+
+        <div class="div-agr">
+          <img src="../img/artech.jpeg" alt="" srcset="" />
+          <div class="text-agr">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam
+            ad, aspernatur quod accusamus illo a adipisci, voluptatibus laborum
+            molestias, nam recusandae iste. Molestiae quaerat veritatis facilis
+            quibusdam maxime vel deleniti.
+          </div>
+        </div>
+
+        <div class="div-agr">
+          <img src="../img/educacion-it.svg" alt="" srcset="" />
+          <div class="text-agr">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam
+            ad, aspernatur quod accusamus illo a adipisci, voluptatibus laborum
+            molestias, nam recusandae iste. Molestiae quaerat veritatis facilis
+            quibusdam maxime vel deleniti.
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer id="foot">
