Mejore los botones de contacto y agregué ancla a la página de Pescar

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 
           <div class="light-box box-hover">
             <h3><i class="fa-solid fa-magnifying-glass"></i> Web</h3>
-            <p>pescar.org.ar</p>
+            <a id="web-pescar" href="http://www.pescar.org.ar/" target="_blank">pescar.org.ar</a>
           </div>
 
           <div class="light-box box-hover">
@@ -428,13 +428,13 @@
         <h2>Follow @FundaciónPescar</h2>
 
         <div class="links">
-          <a href="https://www.facebook.com/pescarargentina" target="_blank">
+          <a id="facebook" href="https://www.facebook.com/pescarargentina" target="_blank">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="https://twitter.com/FundacionPescar" target="_blank">
+          <a id="twitter" href="https://twitter.com/FundacionPescar" target="_blank">
             <i class="fab fa-twitter"></i>
           </a>
-          <a
+          <a id="linkedin"
             href="https://www.linkedin.com/company/fundacionpescar/?originalSubdomain=ar"
             target="_blank"
           >
