--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <section id="features">
         <ul class="cards">
           <li>
-            <a href="" class="card">
+            <a href="" class="card card1">
               <img
                 src="./img/cardsHome/goalsBig.png"
                 class="card__image"
@@ -91,9 +91,6 @@
               />
               <div class="card__overlay">
                 <div class="card__header">
-                  <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
-                    <path d=""></path>
-                  </svg>
                   <div class="card__header-text">
                     <h3 class="card__title">¿Quién es pescar?</h3>
                   </div>
@@ -108,7 +105,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="" class="card card2">
               <img
                 src="./img/cardsHome/teachBig.png"
                 class="card__image"
@@ -116,9 +113,6 @@
               />
               <div class="card__overlay">
                 <div class="card__header">
-                  <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
-                    <path d=""></path>
-                  </svg>
                   <div class="card__header-text">
                     <h3 class="card__title">¿Por qué hacemos este proyecto?</h3>
                   </div>
@@ -135,7 +129,7 @@
             </a>
           </li>
           <li>
-            <a href="" class="card">
+            <a href="" class="card card3">
               <img
                 src="./img/cardsHome/questionBig.png"
                 class="card__image"
@@ -143,9 +137,6 @@
               />
               <div class="card__overlay">
                 <div class="card__header">
-                  <svg class="card__arc" xmlns="http://www.w3.org/2000/svg">
-                    <path d=""></path>
-                  </svg>
                   <div class="card__header-text">
                     <h3 class="card__title">
                       ¿Por qué el curso?/¿Qué distingue esta capacitación de
