--- a/pages/ComoIngresar.html
+++ b/pages/ComoIngresar.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="../style/style.css" type="text/css" />
   </head>
 
-  <body>
+  <body id="bodyCI">
     <div class="menu-btn">
       <i class="fas fa-bars fa-2x"></i>
     </div>
@@ -60,6 +60,65 @@
         </nav>
       </header>
     </main>
+
+    <section id="ci-section">
+      <!-- <div id="ci-preguntas">
+        <div class="ci-preg">
+          <h4 class="ci-preg-title">¿Cómo es el proceso de selección?</h4>
+          El proceso de selección está compuesto por una entrevista grupal, individual y un psicotécnico. Dentro de las posibilidades del cupo limitado por cupo - serán seleccionados los candidatos que más se asemejan a los valores que se buscan. 
+        </div>
+
+        <div class="ci-preg">
+          <h4 class="ci-preg-title">¿Me pueden dar de baja?</h4>
+          Pescar destaca la responsabilidad de uno - con el otro y consigo mismo. Al ingresar al curso creemos que uno debe ser consciente de la posibilidad que tiene en sus manos que otro no consiguió por falta de vacante. Queremos respetar a aquel postulante pidiendo el compromiso de los becados para completar el curso en su totalidad.
+        </div>
+
+        <div class="ci-preg">
+          <h4 class="ci-preg-title">¿Qué pasa si no quedo seleccionado?</h4>
+          ¡No te preocupes! Siempre se abren nuevos cupos y no hay límite de postulaciones. Mientras tanto, te recomendamos que vayas construyendo tus conocimientos técnicos para facilitar la cursada una vez que ingreses. Recordá que, si bien el curso comienza desde un nivel inicial, el programa es intensivo. Te dejamos algunos recursos gratuitos a continuación:
+The odin project.
+30 dias de react.
+Free code camp.
+
+        </div> -->
+
+
+      </div>
+
+      <div>
+        <img class="img-ci-perfil" id="mujerCV" src="../img/mujercv.jpeg" alt="" srcset="">
+        <img class="img-ci-perfil" id="hombreCV" src="../img/hombrecv.jpeg" alt="" srcset="">
+      </div>
+
+      <div id="ci-perfil">
+        <div id="ci-requisitos">
+          <h2>Perfil del aplicante</h2>
+          <div>Contacto: Email y teléfono al aplicar
+                <br>
+              Ubicación: limitado al AMBA
+          </div>
+
+          <div>Se buscan perfiles comprometidos, con una escucha activa, dispuestos a aprender diversas habilidades blandas y técnicas que se enseñan en la beca #PathsToTheFuture</div>
+
+          <h4>CONOCIMIENTOS Y EDUCACIÓN</h4>
+          <div>No es requisito tener ningún conocimiento previo para aplicar a la beca; el programa empieza desde cero. De igual forma, se valoran conocimientos en programación. Si no los tenés, ¡no te preocupes! Lo más importante es demostrar compromiso y ganas de aprender y progresar</div>
+
+
+
+          <h4>HABILIDADES BLANDAS</h4>
+          <div>
+            <UL>
+              <li>Compromiso</li>
+              <li>Trabajo en equipo</li>
+              <li>Autosuperación y progreso</li>
+             </UL>
+        </div>
+        </div>
+
+
+      </div>
+    </section>
+
 
     <footer id="foot">
       <p>
