--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li>
               <a href="./index.html">HOME</a>
             </li>
-            <li>
+            <li id="li_dropdown">
               <div class="dropdown">
                 <button class="dropbtn">
                   NOSOTROS
