Agrego redacción en la página de Agradecimientos

--- a/pages/Agradecimientos.html
+++ b/pages/Agradecimientos.html
@@ -64,40 +64,29 @@
         <div class="div-agr">
           <img src="../img/iconoCompleto.png" alt="" srcset="" />
           <div class="text-agr">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam
-            ad, aspernatur quod accusamus illo a adipisci, voluptatibus laborum
-            molestias, nam recusandae iste. Molestiae quaerat veritatis facilis
-            quibusdam maxime vel deleniti.
+            Agradecemos a la fundación el trabajo de educar para el trabajo, su compromiso y dedicación en cada etapa del proceso, como también el rumbo que le dan al futuro de cada alumno en el rumbo que le quieren dar a su vida.
           </div>
         </div>
 
         <div class="div-agr">
           <img src="../img/JPmorgan.png" alt="" srcset="" />
           <div class="text-agr">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam
-            ad, aspernatur quod accusamus illo a adipisci, voluptatibus laborum
-            molestias, nam recusandae iste. Molestiae quaerat veritatis facilis
-            quibusdam maxime vel deleniti.
+            J.P. Morgan: Gracias por su colaboración y acompañamiento continuo junto a Pescar, por esa gran oportunidad de brindar su granito de arena, podemos salir adelante en lo que nos gusta hacer.
           </div>
         </div>
 
         <div class="div-agr">
           <img src="../img/artech.jpeg" alt="" srcset="" />
           <div class="text-agr">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam
-            ad, aspernatur quod accusamus illo a adipisci, voluptatibus laborum
-            molestias, nam recusandae iste. Molestiae quaerat veritatis facilis
-            quibusdam maxime vel deleniti.
+            Artech es un gran acompañamiento para nosotros, tanto en lo personal como en lo profesional. La calidez humana con la que nos trataron desde el primer día no hay agradecimiento que baste. 
+            Estamos muy contentos y agradecidos de que junto a Pescar y JPM sean las bases de nuestro crecimiento.
           </div>
         </div>
 
         <div class="div-agr">
           <img src="../img/educacion-it.svg" alt="" srcset="" />
           <div class="text-agr">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam
-            ad, aspernatur quod accusamus illo a adipisci, voluptatibus laborum
-            molestias, nam recusandae iste. Molestiae quaerat veritatis facilis
-            quibusdam maxime vel deleniti.
+            Agradecemos la educación y la dedicación para que trabajemos y adquiramos las herramientas necesarias a desarrollar técnicamente en nuestra área laboral. Un trato excelente y acompañamiento en virtud de resolver problemas muy cálido.
           </div>
         </div>
       </div>
