responsive preguntas "cómo ingresar"

--- a/pages/ComoIngresar.html
+++ b/pages/ComoIngresar.html
@@ -62,7 +62,7 @@
     </main>
 
     <section id="ci-section">
-      <!-- <div id="ci-preguntas">
+      <div id="ci-preguntas">
         <div class="ci-preg">
           <h4 class="ci-preg-title">¿Cómo es el proceso de selección?</h4>
           El proceso de selección está compuesto por una entrevista grupal, individual y un psicotécnico. Dentro de las posibilidades del cupo limitado por cupo - serán seleccionados los candidatos que más se asemejan a los valores que se buscan. 
@@ -80,7 +80,7 @@ The odin project.
 30 dias de react.
 Free code camp.
 
-        </div> -->
+        </div>
 
 
       </div>
